[package]
name = "bevy-snake"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2"}
rand = "0.9.0-alpha.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
